breaks TransformerMixin into StreamingTransformer and DecoupledTransformer

--- a/workspace/leventhal_scratch.ipynb
+++ b/workspace/leventhal_scratch.ipynb
@@ -244,7 +244,7 @@
     "\n",
     "with AnimationManager(fps=40) as am:\n",
     "    output = []\n",
-    "    for i, output_row in enumerate(p.run_on(d.neural_data, return_output_stream=False)):\n",
+    "    for i, output_row in enumerate(p.streaming_run_on(d.neural_data, return_output_stream=False)):\n",
     "        if i < 100:\n",
     "            continue\n",
     "        output.append(output_row)\n",
@@ -307,7 +307,7 @@
     "with AnimationManager(fps=40) as am:\n",
     "    \n",
     "    outputs = [[] for p in pipelines]\n",
-    "    for i, output_rows in enumerate(zip(*[p.run_on(d.neural_data) for p in pipelines])):\n",
+    "    for i, output_rows in enumerate(zip(*[p.streaming_run_on(d.neural_data) for p in pipelines])):\n",
     "        if i < 100:\n",
     "            continue\n",
     "        \n",
