--- a/workspace/nauman24u_scratch.ipynb
+++ b/workspace/nauman24u_scratch.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:00.256295Z",
-     "start_time": "2024-08-28T18:58:00.249065Z"
+     "end_time": "2024-08-29T18:46:26.798121Z",
+     "start_time": "2024-08-29T18:46:26.793486Z"
     },
     "collapsed": true
    },
@@ -15,7 +15,8 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from adaptive_latents import proSVD, CenteringTransformer, Pipeline, NumpyTimedDataSource, AnimationManager\n",
+    "from adaptive_latents import proSVD, CenteringTransformer, Pipeline, NumpyTimedDataSource, AnimationManager, KernelSmoother\n",
+    "import adaptive_latents\n",
     "import datasets\n",
     "import itertools\n",
     "import tqdm.notebook as tqdm\n",
@@ -28,30 +29,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:02.020025Z",
-     "start_time": "2024-08-28T18:58:00.515095Z"
+     "end_time": "2024-08-29T18:22:56.933594Z",
+     "start_time": "2024-08-29T18:22:56.360452Z"
     }
    },
    "outputs": [],
    "source": [
-    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[0])\n",
+    "d = datasets.Naumann24uDataset(datasets.Naumann24uDataset.sub_datasets[-1])\n",
     "d.sub_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:02.156506Z",
-     "start_time": "2024-08-28T18:58:02.020914Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "fig, ax = plt.subplots()\n",
-    "d.plot_colors(ax)\n"
    ]
   },
   {
@@ -66,8 +51,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:02.448208Z",
-     "start_time": "2024-08-28T18:58:02.158943Z"
+     "end_time": "2024-08-29T18:22:58.077701Z",
+     "start_time": "2024-08-29T18:22:57.874531Z"
     }
    },
    "outputs": [],
@@ -87,8 +72,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:02.715651Z",
-     "start_time": "2024-08-28T18:58:02.449257Z"
+     "end_time": "2024-08-29T18:22:58.634Z",
+     "start_time": "2024-08-29T18:22:58.334791Z"
     }
    },
    "outputs": [],
@@ -116,8 +101,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:04.325309Z",
-     "start_time": "2024-08-28T18:58:02.718655Z"
+     "end_time": "2024-08-29T18:23:00.240992Z",
+     "start_time": "2024-08-29T18:22:59.093868Z"
     },
     "collapsed": false
    },
@@ -137,8 +122,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:04.557983Z",
-     "start_time": "2024-08-28T18:58:04.326267Z"
+     "end_time": "2024-08-29T18:23:00.711968Z",
+     "start_time": "2024-08-29T18:23:00.241904Z"
     }
    },
    "outputs": [],
@@ -157,6 +142,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO: Systematic Drift?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-29T18:23:00.769136Z",
+     "start_time": "2024-08-29T18:23:00.740419Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "s = d.neural_data.t < d.opto_stimulations['sample'].min()\n",
+    "np.linalg.norm(np.squeeze(d.neural_data.a[s]).mean(axis=0) - np.squeeze(d.neural_data.a[~s]).mean(axis=0))\n",
+    "np.linalg.norm(np.squeeze(d.neural_data.a[~s]).std(axis=0))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Reactions to stim in latent space"
    ]
   },
@@ -165,16 +174,21 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:06.308926Z",
-     "start_time": "2024-08-28T18:58:04.558641Z"
+     "end_time": "2024-08-29T18:23:02.984447Z",
+     "start_time": "2024-08-29T18:23:01.641936Z"
     }
    },
    "outputs": [],
    "source": [
+    "smoothing_factor = 2\n",
+    "\n",
+    "centerer = CenteringTransformer()\n",
     "pro = proSVD(k=10)\n",
+    "\n",
     "p = Pipeline([\n",
-    "    CenteringTransformer(),\n",
+    "    centerer,\n",
     "    pro,\n",
+    "    KernelSmoother(smoothing_factor),\n",
     "])\n",
     "\n",
     "s = d.neural_data.t < d.opto_stimulations['sample'].min()\n",
@@ -184,7 +198,13 @@
     "\n",
     "first_part_streams = p.offline_run_on(first_part_data, convinient_return=False)\n",
     "\n",
-    "whole_offline_streams = p.offline_run_on(d.neural_data, fit=False, convinient_return=False)\n",
+    "centerer.freeze(True)\n",
+    "pro.freeze(True)\n",
+    "whole_offline_streams = Pipeline([centerer, pro, KernelSmoother(smoothing_factor),]).offline_run_on(d.neural_data, convinient_return=False)\n",
+    "centerer.freeze(False)\n",
+    "pro.freeze(False)\n",
+    "\n",
+    "whole_offline_streams[0] = [x for x in whole_offline_streams[0] if not np.isnan(x).any()]\n",
     "offline_t = np.array([x.t for x in whole_offline_streams[0]])\n",
     "offline_output = np.squeeze(whole_offline_streams[0])\n",
     "\n",
@@ -202,8 +222,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:06.694544Z",
-     "start_time": "2024-08-28T18:58:06.309767Z"
+     "end_time": "2024-08-29T18:23:03.509551Z",
+     "start_time": "2024-08-29T18:23:02.985611Z"
     }
    },
    "outputs": [],
@@ -214,7 +234,7 @@
     "axis_0, axis_1 = 0,1\n",
     "\n",
     "for row, output, t in [ (0, online_output, online_t), (1, offline_output, offline_t)]:\n",
-    "    lineness = {0: 'offline', 1: 'online'}.get(row)\n",
+    "    lineness = {0: 'online', 1: 'offline'}.get(row)\n",
     "\n",
     "    s = t < d.opto_stimulations.loc[0, 'sample']\n",
     "    axs[row,0].scatter(output[s,axis_0], output[s,axis_1], s=10, c=t[s], lw=0)\n",
@@ -228,6 +248,41 @@
     "        \n",
     "    axs[row,0].set_title(f'visual stimuli period {lineness} manifold')\n",
     "    axs[row,1].set_title(f'opto stimulation {lineness} manifold')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-29T18:46:27.939726Z",
+     "start_time": "2024-08-29T18:46:27.714479Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "k = 10\n",
+    "\n",
+    "output, t = (offline_output, offline_t) if False else (online_output, online_t)\n",
+    "# output, t = \n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8,8))\n",
+    "s = t > d.opto_stimulations.loc[0, 'sample']\n",
+    "ax.scatter(output[s,0], output[s,1], s=10, lw=0, color=np.array([1,1,1])*.8,)\n",
+    "r = np.arange(5*k,5*k+5)\n",
+    "assert np.std(d.opto_stimulations.loc[r, 'target_neuron']) == 0\n",
+    "for ii, i in enumerate(r):\n",
+    "    start = int(d.opto_stimulations.loc[i, 'sample'])\n",
+    "    s = (start <= t) & (t <= start + 34)\n",
+    "    ax.plot(output[s,axis_0], output[s,axis_1], color=matplotlib.colors.hsv_to_rgb(np.array([10/360, 1, (8-ii)/8])))\n",
+    "    \n",
+    "    start_idx = np.nonzero(s)[0][0]\n",
+    "    ax.scatter(output[start_idx, axis_0], output[start_idx,axis_1], c='k', s=15)\n",
+    "    # ax.arrow(x = output[start_idx, 0], y = output[start_idx, 1], dx = output[start_idx+1, 0] - output[start_idx, 0], dy= output[start_idx+1, 1] - output[start_idx, 1], zorder=2, length_includes_head=True, head_width=.2, color='k') \n",
+    "\n",
+    "fig.savefig(adaptive_latents.CONFIG['plot_save_path'] / \"plot.svg\")\n",
     "\n"
    ]
   },
@@ -249,8 +304,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:06.708933Z",
-     "start_time": "2024-08-28T18:58:06.695411Z"
+     "end_time": "2024-08-29T17:53:42.951640Z",
+     "start_time": "2024-08-29T17:53:42.927476Z"
     }
    },
    "outputs": [],
@@ -265,8 +320,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:08.324867Z",
-     "start_time": "2024-08-28T18:58:06.709529Z"
+     "end_time": "2024-08-29T17:53:44.560279Z",
+     "start_time": "2024-08-29T17:53:42.955298Z"
     }
    },
    "outputs": [],
@@ -277,7 +332,9 @@
     "])\n",
     "p.offline_run_on(d.neural_data)\n",
     "\n",
-    "output = p.offline_run_on(d.neural_data, fit=False, convinient_return=False)[0]\n",
+    "p.freeze(True)\n",
+    "output = p.offline_run_on(d.neural_data, convinient_return=False)[0]\n",
+    "p.freeze(False)\n",
     "output = [x for x in output if not np.isnan(x).any()]\n",
     "output, t = np.squeeze(output), np.squeeze([x.t for x in output])"
    ]
@@ -287,8 +344,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:08.328462Z",
-     "start_time": "2024-08-28T18:58:08.325702Z"
+     "end_time": "2024-08-29T17:53:44.564063Z",
+     "start_time": "2024-08-29T17:53:44.561712Z"
     }
    },
    "outputs": [],
@@ -301,8 +358,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:58:08.359711Z",
-     "start_time": "2024-08-28T18:58:08.329128Z"
+     "end_time": "2024-08-29T17:53:44.599412Z",
+     "start_time": "2024-08-29T17:53:44.564636Z"
     }
    },
    "outputs": [],
@@ -351,7 +408,7 @@
     "\n",
     "all_combination_iter = list(itertools.combinations(range(10), 3))\n",
     "interesting_combinations_iter = [leaf for tree in interesting_combinations.values() for leaf in tree]\n",
-    "combinations = interesting_combinations_iter if True else all_combination_iter\n",
+    "combinations = interesting_combinations_iter if False else all_combination_iter\n",
     "combinations = iter(tqdm.tqdm(combinations))"
    ]
   },
@@ -360,8 +417,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T19:00:08.497456Z",
-     "start_time": "2024-08-28T19:00:08.397249Z"
+     "end_time": "2024-08-29T17:53:45.017885Z",
+     "start_time": "2024-08-29T17:53:44.601169Z"
     }
    },
    "outputs": [],
@@ -377,6 +434,7 @@
     "ax.scatter(output[s,axis_0], output[s,axis_1], output[s,axis_2], s=7)\n",
     "ax.scatter(output[~s,axis_0], output[~s,axis_1], output[~s,axis_2], s=7)\n",
     "\n",
+    "ax.set_title(d.sub_dataset + \" slices\")\n",
     "ax.set_xlabel(f'x: {axis_0}')\n",
     "ax.set_ylabel(f'y: {axis_1}')\n",
     "ax.set_zlabel(f'z: {axis_2}')\n",
@@ -388,21 +446,28 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.357010Z",
-     "start_time": "2024-08-28T18:57:43.802617Z"
+     "end_time": "2024-08-29T17:53:45.033418Z",
+     "start_time": "2024-08-29T17:53:45.021804Z"
     }
    },
    "outputs": [],
    "source": [
     "def pca(x):\n",
     "    u, s, vh = np.linalg.svd(x - x.mean(axis=0), full_matrices=False)\n",
-    "    s = s/x.shape[0]\n",
+    "    # s = s/x.shape[0]\n",
+    "    s = s\n",
     "    s_slice = s > 1e-10\n",
     "    return u[:, s_slice], s[s_slice], vh.T[:, s_slice]\n",
     "\n",
     "first_part_slice = d.neural_data.t < d.opto_stimulations['sample'].min()\n",
     "\n",
     "a = np.squeeze(d.neural_data.a)\n",
+    "\n",
+    "\n",
+    "a = np.vstack([rng.normal(size=(100,5)), 1*rng.normal(size=(50,5))])\n",
+    "first_part_slice = np.arange(a.shape[0])\n",
+    "first_part_slice[first_part_slice < 100] = 1\n",
+    "\n",
     "u0, s0, v0 = pca(a)\n",
     "u1, s1, v1 = pca(a[first_part_slice])\n",
     "u2, s2, v2 = pca(a[~first_part_slice])\n",
@@ -414,17 +479,22 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.672143Z",
-     "start_time": "2024-08-28T18:57:44.357604Z"
+     "end_time": "2024-08-29T17:53:45.557543Z",
+     "start_time": "2024-08-29T17:53:45.036428Z"
     }
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "fig, ax = plt.subplots()\n",
-    "ax.plot(np.cumsum(s0), label='whole dataset')\n",
-    "ax.plot(np.cumsum(s1), label='visual period')\n",
-    "ax.plot(np.cumsum(s2), label='stim period')\n",
+    "\n",
+    "x0, x1, x2 = [np.arange(s.size) for s in [s0, s1, s2]]\n",
+    "y0, y1, y2 = [np.cumsum(s) for s in [s0, s1, s2]]\n",
+    "\n",
+    "\n",
+    "ax.plot(x0, y0, label='whole dataset')\n",
+    "ax.plot(x1, y1, label='visual period')\n",
+    "ax.plot(x2, y2, label='stim period')\n",
     "ax.legend()\n",
     "ax.set_xlabel(\"# components\")\n",
     "ax.set_ylabel(\"cumulative variance explained\")\n",
@@ -436,8 +506,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.689060Z",
-     "start_time": "2024-08-28T18:57:44.674581Z"
+     "end_time": "2024-08-29T17:53:45.561725Z",
+     "start_time": "2024-08-29T17:53:45.558403Z"
     }
    },
    "outputs": [],
@@ -456,13 +526,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.826546Z",
-     "start_time": "2024-08-28T18:57:44.692536Z"
+     "end_time": "2024-08-29T17:53:45.865509Z",
+     "start_time": "2024-08-29T17:53:45.562289Z"
     }
    },
    "outputs": [],
    "source": [
-    "%matplotlib qt\n",
+    "# %matplotlib qt\n",
     "proj = a @ v0\n",
     "\n",
     "fig = plt.figure()\n",
@@ -476,8 +546,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.830642Z",
-     "start_time": "2024-08-28T18:57:44.827322Z"
+     "end_time": "2024-08-29T17:53:45.877232Z",
+     "start_time": "2024-08-29T17:53:45.868246Z"
     }
    },
    "outputs": [],
@@ -497,8 +567,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-28T18:57:44.881817Z",
-     "start_time": "2024-08-28T18:57:44.833320Z"
+     "end_time": "2024-08-29T17:53:46.104327Z",
+     "start_time": "2024-08-29T17:53:45.880787Z"
     },
     "collapsed": false
    },
@@ -509,29 +579,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Video of trajectory"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-29T17:53:46.207474Z",
+     "start_time": "2024-08-29T17:53:46.105524Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "raise Exception()\n",
-    "s = d.neural_data.t < d.opto_stimulations['sample'].min()\n",
-    "first_part_data = NumpyTimedDataSource(d.neural_data.a[s], d.neural_data.t[s])\n",
-    "p.offline_run_on(first_part_data)\n",
-    "\n",
-    "with AnimationManager(n_rows=2, n_cols=2) as am:\n",
-    "    for output in p.run_on(first_part_data):\n",
-    "        am.axs[0,0].scatter(output[0,0], output[0,1])\n",
-    "        \n",
-    "        am.grab_frame()"
+    "%matplotlib inline\n",
+    "fig, ax = plt.subplots()\n",
+    "d.plot_colors(ax)"
    ]
   }
  ],
