--- a/workspace/show_off_algorithms.ipynb
+++ b/workspace/show_off_algorithms.ipynb
@@ -102,7 +102,7 @@
     "with AnimationManager(projection='3d', figsize=(5,5)) as am:\n",
     "    ax = am.axs[0,0]\n",
     "    outputs = np.zeros_like(X)\n",
-    "    for i, output in enumerate(p.run_on(X)):\n",
+    "    for i, output in enumerate(p.streaming_run_on(X)):\n",
     "        outputs[i] = output\n",
     "        \n",
     "        ax.cla()\n",
@@ -188,7 +188,7 @@
     "    ax1 = am.fig.add_subplot(1,2,1, projection='3d')\n",
     "    ax2 = am.fig.add_subplot(1,2,2)\n",
     "    outputs = np.zeros_like(sub_X)\n",
-    "    for i, output in enumerate(tqdm(jpca.run_on(sub_X))):\n",
+    "    for i, output in enumerate(tqdm(jpca.streaming_run_on(sub_X))):\n",
     "        outputs[i] = output\n",
     "        \n",
     "        ax1.cla()\n",
