moves AnimationManager to plotting_functions
also a general step twoard depreciation of the BWRun-era functions

--- a/workspace/leventhal_scratch.ipynb
+++ b/workspace/leventhal_scratch.ipynb
@@ -16,8 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import adaptive_latents\n",
     "import itertools\n",
-    "from adaptive_latents import CenteringTransformer, Pipeline, proSVD, KernelSmoother, sjPCA, mmICA\n",
-    "from adaptive_latents.bw_run import AnimationManager\n",
+    "from adaptive_latents import CenteringTransformer, Pipeline, proSVD, KernelSmoother, sjPCA, mmICA, AnimationManager\n",
     "from datasets import Leventhal24uDataset\n",
     "from sklearn.decomposition import PCA\n",
     "from tqdm.notebook import tqdm\n",
