adds changes to make test pass and increase test coverage

--- a/notebooks/profiling.ipynb
+++ b/notebooks/profiling.ipynb
@@ -4,71 +4,95 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:30.152818Z",
+     "start_time": "2024-09-02T20:07:30.146871Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from adaptive_latents.profiling_functions import get_speed_by_time, get_speed_per_step\n",
-    "from make_profiling_figure import make_data, bw_params\n",
     "import adaptive_latents as al\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n",
-    "import pdb"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:30.604852Z",
+     "start_time": "2024-09-02T20:07:30.155899Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "A, beh = make_data()"
+    "A, beh = al.input_sources.hmm_simulation.simulate_example_data(n=5000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:34.634455Z",
+     "start_time": "2024-09-02T20:07:30.606098Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "t = al.profiling_functions.get_speed_by_time(A, beh, prosvd_k=4, bw_params=bw_params, max_steps=5000)\n"
+    "t = al.profiling_functions.get_speed_by_time(A, beh, prosvd_k=4, bw_params=al.Bubblewrap.default_clock_parameters);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:34.746939Z",
+     "start_time": "2024-09-02T20:07:34.635416Z"
+    }
+   },
    "outputs": [],
    "source": [
     "\n",
-    "plt.plot((t[:-1] - t[0])*1000,np.diff(t)*1000);\n",
-    "plt.ylim([0, 31]);\n",
+    "plt.plot((t[:-1] - t[0])*1000,np.diff(t)*1000)\n",
+    "plt.ylim([0, 31])\n",
     "plt.axhline(30, color='k', linestyle='--')\n",
     "plt.xlabel(\"real time (s)\")\n",
-    "plt.ylabel(\"iteration time (ms)\")\n",
-    "plt.savefig(\"/home/jgould/Downloads/super_fast.svg\")"
+    "plt.ylabel(\"iteration time (ms)\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:38.361434Z",
+     "start_time": "2024-09-02T20:07:34.751150Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "times_dict = al.profiling_functions.get_speed_per_step(A, beh, prosvd_k=4, bw_params=bw_params, max_steps=5000)"
+    "times_dict = al.profiling_functions.get_speed_per_step(A, beh, prosvd_k=4, bw_params=al.Bubblewrap.default_clock_parameters, max_steps=5000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:38.363620Z",
+     "start_time": "2024-09-02T20:07:38.361992Z"
+    }
+   },
    "outputs": [],
    "source": [
     "keys = list(times_dict.keys())\n",
@@ -79,7 +103,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:38.641418Z",
+     "start_time": "2024-09-02T20:07:38.364042Z"
+    }
+   },
    "outputs": [],
    "source": [
     "plt.hist(times.sum(axis=0), np.linspace(7,65,101));"
@@ -89,7 +118,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:38.688722Z",
+     "start_time": "2024-09-02T20:07:38.642090Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
@@ -104,7 +138,12 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-02T20:07:38.762678Z",
+     "start_time": "2024-09-02T20:07:38.689224Z"
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
