improves notebook compatibility and adds animal annotations to datasets

--- a/workspace/leventhal_scratch.ipynb
+++ b/workspace/leventhal_scratch.ipynb
@@ -15,10 +15,11 @@
     "import adaptive_latents\n",
     "import itertools\n",
     "from adaptive_latents import CenteringTransformer, Pipeline, proSVD, KernelSmoother, sjPCA, mmICA, AnimationManager\n",
-    "from datasets import Leventhal24uDataset\n",
+    "from adaptive_latents import datasets\n",
     "from sklearn.decomposition import PCA\n",
     "from tqdm.notebook import tqdm\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "Leventhal24uDataset = datasets.Leventhal24uDataset"
    ],
    "outputs": [],
    "execution_count": 15
@@ -390,19 +391,19 @@
     "\n",
     "        next_t = d.neural_data.current_sample_time()\n",
     "        if len(o.shape) == 2 and start < next_t < start + video_time:\n",
-    "            am.ax[0,0].cla()\n",
-    "            am.ax[0,0].autoscale(True)\n",
+    "            am.axs[0,0].cla()\n",
+    "            am.axs[0,0].autoscale(True)\n",
     "            \n",
-    "            am.ax[0,0].scatter(o[:,0], o[:,1], alpha=.999**np.arange(o.shape[0])[::-1], color='C0', linewidth=0, s=5)\n",
-    "            am.ax[0,0].plot(o[-10:,0], o[-10:,1], color='C1')\n",
-    "            am.ax[0,0].set_title(f'{i}')\n",
-    "            am.ax[0,0].axis('equal')\n",
+    "            am.axs[0,0].scatter(o[:,0], o[:,1], alpha=.999**np.arange(o.shape[0])[::-1], color='C0', linewidth=0, s=5)\n",
+    "            am.axs[0,0].plot(o[-10:,0], o[-10:,1], color='C1')\n",
+    "            am.axs[0,0].set_title(f'{i}')\n",
+    "            am.axs[0,0].axis('equal')\n",
     "\n",
     "            # if np.abs(next_t - (d.trial_data['Time'] + d.trial_data['preTone'])).min() < .5:\n",
     "            if np.abs(next_t - (d.trial_data['Time'])).min() < .5:\n",
-    "                x = (am.ax[0,0].transAxes + am.ax[0,0].transData.inverted()).transform((.98,.98))\n",
-    "                am.ax[0,0].autoscale(False)\n",
-    "                am.ax[0,0].scatter(*x, color='green', s=100)\n",
+    "                x = (am.axs[0,0].transAxes + am.axs[0,0].transData.inverted()).transform((.98,.98))\n",
+    "                am.axs[0,0].autoscale(False)\n",
+    "                am.axs[0,0].scatter(*x, color='green', s=100)\n",
     "\n",
     "            am.grab_frame()\n",
     "        elif next_t > start + video_time:\n",
