--- a/workspace/nauman24u_scratch.ipynb
+++ b/workspace/nauman24u_scratch.ipynb
@@ -13,9 +13,8 @@
     "import numpy as np\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
-    "from adaptive_latents import proSVD, CenteringTransformer, Pipeline, NumpyTimedDataSource, AnimationManager, KernelSmoother\n",
+    "from adaptive_latents import proSVD, CenteringTransformer, Pipeline, NumpyTimedDataSource, AnimationManager, KernelSmoother, datasets\n",
     "import adaptive_latents\n",
-    "import datasets\n",
     "import itertools\n",
     "import tqdm.notebook as tqdm\n",
     "\n",
