--- a/workspace/show_off_algorithms.ipynb
+++ b/workspace/show_off_algorithms.ipynb
@@ -16,11 +16,12 @@
     "from adaptive_latents import CenteringTransformer, Pipeline, proSVD, sjPCA, mmICA, AnimationManager, KernelSmoother, proPLS, Bubblewrap\n",
     "import adaptive_latents as al\n",
     "from scipy.stats import special_ortho_group\n",
-    "from datasets import TostadoMarcos24Dataset\n",
+    "from adaptive_latents import datasets\n",
     "from tqdm.notebook import tqdm\n",
     "import IPython.display as ipd\n",
     "\n",
     "\n",
+    "TostadoMarcos24Dataset = datasets.TostadoMarcos24Dataset\n",
     "rng = np.random.default_rng(0)"
    ],
    "outputs": [],
@@ -143,7 +144,7 @@
    "cell_type": "code",
    "source": [
     "%%capture\n",
-    "d = Leventhal24uDataset()\n",
+    "d = datsets.Leventhal24uDataset()\n",
     "\n",
     "centerer = CenteringTransformer()\n",
     "pro = proSVD(k=3, whiten=False)\n",
