adds a data stream Concatenator
also adds prequential evaluation logging to regression

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T19:02:46.913610Z",
-     "start_time": "2024-09-16T19:02:44.385260Z"
+     "end_time": "2024-09-17T17:18:26.767356Z",
+     "start_time": "2024-09-17T17:18:24.603739Z"
     },
     "collapsed": true
    },
@@ -16,7 +16,7 @@
     "import numpy as np\n",
     "\n",
     "import adaptive_latents\n",
-    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother\n",
+    "from adaptive_latents import AnimationManager, Pipeline, CenteringTransformer, proSVD, Bubblewrap, VanillaOnlineRegressor, NumpyTimedDataSource, KernelSmoother, Concatenator\n",
     "import adaptive_latents.input_sources.datasets as datasets\n",
     "import adaptive_latents.plotting_functions as pf\n",
     "import matplotlib.pyplot as plt\n",
@@ -85,33 +85,59 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T19:18:59.027872Z",
-     "start_time": "2024-09-16T19:18:04.289280Z"
+     "end_time": "2024-09-17T17:18:53.779839Z",
+     "start_time": "2024-09-17T17:18:52.789034Z"
     }
    },
    "outputs": [],
    "source": [
     "d = datasets.Temmar24uDataset()\n",
     "\n",
-    "bw = Bubblewrap(\n",
-    "    num=100,\n",
-    "    eps=1e-3,\n",
-    "    step=1,\n",
-    "    num_grad_q=3,\n",
-    ")\n",
-    "reg = VanillaOnlineRegressor()\n",
     "\n",
     "p = Pipeline([\n",
-    "    # proSVD(k=6),\n",
-    "    # KernelSmoother(tau=0.2/d.bin_width),\n",
-    "    bw,\n",
-    "    reg\n",
+    "    proSVD(k=6, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    KernelSmoother(tau=0.2/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
+    "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2}),\n",
+    "    Bubblewrap(\n",
+    "        num=100,\n",
+    "        eps=1e-3,\n",
+    "        step=1,\n",
+    "        num_grad_q=3,\n",
+    "        input_streams={2:'X'}, \n",
+    "        output_streams={2:2},\n",
+    "    ),\n",
+    "    VanillaOnlineRegressor(\n",
+    "        log_level=1,\n",
+    "        input_streams={2:'X', 3:'Y'},\n",
+    "        output_streams={2:2},\n",
+    "    ),\n",
     "])\n",
-    "iterator = p.streaming_run_on([(copy.copy(d.behavioral_data), 1), (copy.copy(d.behavioral_data),0)], return_output_stream=True)\n",
     "\n",
+    "bw: Bubblewrap = p.steps[-2]\n",
+    "reg: VanillaOnlineRegressor = p.steps[-1]\n",
+    "\n",
+    "streams = []\n",
+    "streams.append( (d.neural_data, 0) )\n",
+    "streams.append( (d.behavioral_data, 1) )\n",
+    "streams.append( (d.behavioral_data, 3) )\n",
+    "iterator = p.streaming_run_on(streams, return_output_stream=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-17T17:19:18.020220Z",
+     "start_time": "2024-09-17T17:18:54.355449Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "time_between_draws = .1\n",
-    "time_of_last_draw = 500\n",
-    "exit_time = 520\n",
+    "time_of_last_draw = 100\n",
+    "exit_time = 110\n",
     "prediction = []\n",
     "prediction_t = []\n",
     "pbar = tqdm(total=exit_time)\n",
@@ -122,17 +148,15 @@
     "    am.grab_frame()\n",
     "    \n",
     "    for output, stream in iterator:\n",
-    "        current_ts = [s[0].current_sample_time() for s in p.mid_run_sources]\n",
-    "        current_ts = list(filter(lambda x: x is not None, current_ts))\n",
-    "        current_t = max(current_ts) if len(current_ts) else 0\n",
-    "        assert current_t == output.t\n",
+    "        current_t = output.t\n",
     "        pbar.update(current_t - pbar.n)\n",
     "\n",
-    "        if stream == 1 and current_t > time_of_last_draw - 10:\n",
-    "            time_to_predict = bw.last_timepoint + .1\n",
+    "        if stream == 3 and current_t > time_of_last_draw - 10:\n",
+    "            prediction_offset = .1\n",
+    "            time_to_predict = bw.last_timepoint + prediction_offset\n",
     "            output = reg.predict(bw.get_alpha_at_t(time_to_predict)) # todo: why doesn't transform work?\n",
     "            prediction.append(output)\n",
-    "            prediction_t.append(current_t)\n",
+    "            prediction_t.append(time_to_predict)\n",
     "\n",
     "        if current_t > time_of_last_draw + time_between_draws:\n",
     "            old_axes = ax.axis()\n",
@@ -161,36 +185,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-16T19:12:17.899536Z",
-     "start_time": "2024-09-16T19:12:17.893179Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "bw.last_timepoint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T19:02:19.467210Z",
-     "start_time": "2024-09-16T19:02:19.458425Z"
+     "end_time": "2024-09-17T17:18:47.344637Z",
+     "start_time": "2024-09-17T17:18:47.329531Z"
     }
    },
    "outputs": [],
    "source": [
-    "p = Pipeline()\n",
-    "for o in p.streaming_run_on([['a', 'b', 'c'], ['x', 'y', 'z']]):\n",
-    "    s0 = p.mid_run_sources[0][0]\n",
-    "    s1 = p.mid_run_sources[1][0]\n",
-    "    print(f'{o}, t={o.t}, {s0.current_time} {s1.current_time}')\n",
-    "\n"
+    "\n",
+    "reg = VanillaOnlineRegressor(log_level=1)\n",
+    "\n",
+    "reg.partial_fit_transform(np.array([0]),0)\n",
+    "reg.partial_fit_transform(np.array([0]),1)\n",
+    "\n",
+    "reg.partial_fit_transform(np.array([0]),0)\n",
+    "reg.partial_fit_transform(np.array([0]),1)\n",
+    "\n",
+    "reg.partial_fit_transform(np.array([0]),0)\n",
+    "reg.partial_fit_transform(np.array([0]),1)\n",
+    "\n",
+    "reg.partial_fit_transform(np.array([0]),0)\n",
+    "reg.partial_fit_transform(np.array([0]),1)\n",
+    "\n",
+    "reg.log\n"
    ]
   }
  ],
