adds code to load the zong22 dataset

--- a/workspace/sfn_figures.ipynb
+++ b/workspace/sfn_figures.ipynb
@@ -6,8 +6,8 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T17:18:26.767356Z",
-     "start_time": "2024-09-17T17:18:24.603739Z"
+     "end_time": "2024-09-18T18:26:12.589083Z",
+     "start_time": "2024-09-18T18:26:09.684348Z"
     },
     "collapsed": true
    },
@@ -38,8 +38,8 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-13T15:45:54.373270Z",
-     "start_time": "2024-09-13T15:45:48.530504Z"
+     "end_time": "2024-09-18T18:26:20.395049Z",
+     "start_time": "2024-09-18T18:26:12.589875Z"
     }
    },
    "outputs": [],
@@ -85,8 +85,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T17:18:53.779839Z",
-     "start_time": "2024-09-17T17:18:52.789034Z"
+     "end_time": "2024-09-18T18:28:00.495595Z",
+     "start_time": "2024-09-18T18:27:59.717526Z"
     }
    },
    "outputs": [],
@@ -99,15 +99,15 @@
     "    KernelSmoother(tau=0.2/d.bin_width, input_streams={0:'X'}, output_streams={0:0}),\n",
     "    Concatenator(input_streams={0: 0, 1: 1}, output_streams={0:2, 1:2}),\n",
     "    Bubblewrap(\n",
-    "        num=100,\n",
+    "        num=250,\n",
     "        eps=1e-3,\n",
     "        step=1,\n",
     "        num_grad_q=3,\n",
     "        input_streams={2:'X'}, \n",
     "        output_streams={2:2},\n",
+    "        # log_level=1\n",
     "    ),\n",
     "    VanillaOnlineRegressor(\n",
-    "        log_level=1,\n",
     "        input_streams={2:'X', 3:'Y'},\n",
     "        output_streams={2:2},\n",
     "    ),\n",
@@ -117,7 +117,7 @@
     "reg: VanillaOnlineRegressor = p.steps[-1]\n",
     "\n",
     "streams = []\n",
-    "streams.append( (d.neural_data, 0) )\n",
+    "streams.append( (d.neural_data,     0) )\n",
     "streams.append( (d.behavioral_data, 1) )\n",
     "streams.append( (d.behavioral_data, 3) )\n",
     "iterator = p.streaming_run_on(streams, return_output_stream=True)"
@@ -129,15 +129,17 @@
    "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T17:19:18.020220Z",
-     "start_time": "2024-09-17T17:18:54.355449Z"
+     "start_time": "2024-09-18T18:28:02.985114Z"
+    },
+    "jupyter": {
+     "is_executing": true
     }
    },
    "outputs": [],
    "source": [
     "time_between_draws = .1\n",
-    "time_of_last_draw = 100\n",
-    "exit_time = 110\n",
+    "time_of_last_draw = 500\n",
+    "exit_time = 510\n",
     "prediction = []\n",
     "prediction_t = []\n",
     "pbar = tqdm(total=exit_time)\n",
@@ -154,7 +156,7 @@
     "        if stream == 3 and current_t > time_of_last_draw - 10:\n",
     "            prediction_offset = .1\n",
     "            time_to_predict = bw.last_timepoint + prediction_offset\n",
-    "            output = reg.predict(bw.get_alpha_at_t(time_to_predict)) # todo: why doesn't transform work?\n",
+    "            output = reg.predict(bw.get_alpha_at_t(time_to_predict))\n",
     "            prediction.append(output)\n",
     "            prediction_t.append(time_to_predict)\n",
     "\n",
@@ -188,28 +190,15 @@
    "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-17T17:18:47.344637Z",
-     "start_time": "2024-09-17T17:18:47.329531Z"
+     "end_time": "2024-09-17T19:14:56.596817Z",
+     "start_time": "2024-09-17T19:14:56.414383Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
-    "reg = VanillaOnlineRegressor(log_level=1)\n",
-    "\n",
-    "reg.partial_fit_transform(np.array([0]),0)\n",
-    "reg.partial_fit_transform(np.array([0]),1)\n",
-    "\n",
-    "reg.partial_fit_transform(np.array([0]),0)\n",
-    "reg.partial_fit_transform(np.array([0]),1)\n",
-    "\n",
-    "reg.partial_fit_transform(np.array([0]),0)\n",
-    "reg.partial_fit_transform(np.array([0]),1)\n",
-    "\n",
-    "reg.partial_fit_transform(np.array([0]),0)\n",
-    "reg.partial_fit_transform(np.array([0]),1)\n",
-    "\n",
-    "reg.log\n"
+    "fig, ax = plt.subplots()\n",
+    "reg.plot_preq_error(ax)"
    ]
   }
  ],
