--- a/workspace/zong22.ipynb
+++ b/workspace/zong22.ipynb
@@ -6,25 +6,20 @@
    "id": "0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:36.957098Z",
-     "start_time": "2024-09-18T17:58:33.091293Z"
+     "end_time": "2024-09-20T22:37:06.956973Z",
+     "start_time": "2024-09-20T22:37:04.019197Z"
     },
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
-    "import pathlib\n",
-    "import pandas as pd\n",
     "from tqdm.notebook import tqdm\n",
-    "import pims\n",
     "\n",
-    "from adaptive_latents import Pipeline, CenteringTransformer, proSVD, sjPCA, AnimationManager, NumpyTimedDataSource, KernelSmoother\n",
+    "from adaptive_latents import Pipeline, CenteringTransformer, proSVD, sjPCA, AnimationManager, KernelSmoother, SwitchingParallelTransformer, mmICA\n",
     "import adaptive_latents.plotting_functions as pf\n",
-    "\n",
-    "doi = \"https://dx.doi.org/10.11582/2022.00008\""
+    "from adaptive_latents import datasets\n"
    ]
   },
   {
@@ -33,20 +28,13 @@
    "id": "1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:36.965072Z",
-     "start_time": "2024-09-18T17:58:36.958463Z"
+     "end_time": "2024-09-20T22:37:07.203905Z",
+     "start_time": "2024-09-20T22:37:06.958145Z"
     }
    },
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "base = pathlib.Path('/media/jgould/Data/CA1_recordings/97288/20210315/')\n",
-    "img = Image.open(base/'97288_20210315_00002.tif')\n",
-    "\n",
-    "iscell = np.load(base/'suite2p'/'plane0'/'iscell.npy')\n",
-    "F = np.load(base/'suite2p'/'plane0'/'F.npy')\n",
-    "ncells = int(sum(iscell[:,0]))\n",
-    "\"\"\"\n"
+    "d  = datasets.Zong22Dataset(2)"
    ]
   },
   {
@@ -55,39 +43,14 @@
    "id": "2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:37.302881Z",
-     "start_time": "2024-09-18T17:58:36.965881Z"
+     "end_time": "2024-09-20T22:37:07.337127Z",
+     "start_time": "2024-09-20T22:37:07.204609Z"
     }
    },
    "outputs": [],
    "source": [
-    "base = pathlib.Path('/media/jgould/Data/VC_recordings/93562/20200817/')\n",
-    "neural_Fs = 15\n",
-    "\n",
-    "iscell = np.load(base/'suite2p'/'plane0'/'iscell.npy')\n",
-    "F_all = np.load(base/'suite2p'/'plane0'/'F.npy')\n",
-    "ncells = int(sum(iscell[:,0]))\n",
-    "\n",
-    "def make_beh(fpath):\n",
-    "    pre_beh = pd.read_csv(fpath)\n",
-    "    columns = [\"t\"] + list(map(lambda a : f\"{a[0]}_{a[1]}\", zip(pre_beh.iloc[0, 1:], pre_beh.iloc[1, 1:])))\n",
-    "    columns = {pre_beh.columns[i]:columns[i] for i in range(len(columns))}\n",
-    "    beh = pre_beh.rename(columns=columns).iloc[2:].astype(float).reset_index(drop=True)\n",
-    "    beh.t = beh.t/neural_Fs\n",
-    "    return beh\n",
-    "\n",
-    "\n",
-    "if False:\n",
-    "    F = F_all[:, :F_all.shape[1]//2]\n",
-    "    beh = make_beh(base/\"93562_imaging_20200817_withcookies_00001_trackingVideoDLC_resnet50_OPENMINI2P_bottomcameraAug26shuffle1_1030000filtered.csv\")\n",
-    "    img =   Image.open(base/\"93562_imaging_20200817_withcookies_00001.tif\")\n",
-    "    video = pims.Video(base/\"93562_imaging_20200817_withcookies_00001_trackingVideo.avi\")\n",
-    "else:\n",
-    "    F = F_all[:, F_all.shape[1]//2:]\n",
-    "    img =   Image.open(base/\"93562_imaging_20200817_nocookies_00001.tif\")\n",
-    "    video = pims.Video(base/\"93562_imaging_20200817_nocookies_00001_trackingVideo.avi\")\n",
-    "    beh = make_beh(base/\"93562_imaging_20200817_nocookies_00001_trackingVideoDLC_resnet50_OPENMINI2P_bottomcameraAug26shuffle1_1030000filtered.csv\")\n",
-    "\n"
+    "plt.matshow(d.F[:,:500])\n",
+    "plt.title(\"F\");"
    ]
   },
   {
@@ -96,17 +59,16 @@
    "id": "3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:37.312075Z",
-     "start_time": "2024-09-18T17:58:37.304242Z"
+     "end_time": "2024-09-20T22:37:07.881218Z",
+     "start_time": "2024-09-20T22:37:07.339165Z"
     }
    },
    "outputs": [],
    "source": [
-    "neural_data = NumpyTimedDataSource(F.T, np.arange(F.shape[1]) * 1/neural_Fs)\n",
-    "behavioral_data = NumpyTimedDataSource(beh.loc[:,[\"mouse_x\", \"mouse_y\"]].to_numpy(), beh.t.to_numpy())\n",
-    "video_t = behavioral_data.t\n",
-    "assert abs(behavioral_data.t[-1] - neural_data.t[-1]) < .1\n",
-    "print(neural_data.t[-1])"
+    "planes = []\n",
+    "for i in range(1000):\n",
+    "    d.raw_images.seek(i)\n",
+    "    planes.append(np.array(d.raw_images))"
    ]
   },
   {
@@ -115,42 +77,8 @@
    "id": "4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:37.698694Z",
-     "start_time": "2024-09-18T17:58:37.312873Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plt.matshow(F[iscell[:,0] == 1,:500])\n",
-    "plt.title(\"F\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:38.547520Z",
-     "start_time": "2024-09-18T17:58:37.701182Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "planes = []\n",
-    "for i in range(1000):\n",
-    "    img.seek(i)\n",
-    "    planes.append(np.array(img))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-18T17:58:39.045901Z",
-     "start_time": "2024-09-18T17:58:38.550240Z"
+     "end_time": "2024-09-20T22:37:08.156314Z",
+     "start_time": "2024-09-20T22:37:07.882364Z"
     }
    },
    "outputs": [],
@@ -161,18 +89,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T18:23:32.484411Z",
-     "start_time": "2024-09-18T18:23:31.679193Z"
+     "end_time": "2024-09-20T22:37:08.301255Z",
+     "start_time": "2024-09-20T22:37:08.156790Z"
     }
    },
    "outputs": [],
    "source": [
-    "\n",
-    "stat = np.load(base/'suite2p'/'plane0'/'stat.npy', allow_pickle=True)\n",
-    "ops = np.load(base/'suite2p'/'plane0'/'ops.npy', allow_pickle=True).item()\n",
     "\n",
     "im = np.mean(planes, axis=0)\n",
     "# im = np.zeros((ops['Ly'], ops['Lx']))\n",
@@ -184,7 +109,7 @@
     "\n",
     "\n",
     "plt.matshow(-im, cmap='Grays')\n",
-    "xs, ys = list(zip(*[cell['med'] for cell in stat]))\n",
+    "xs, ys = list(zip(*[cell['med'] for cell in d.stat]))\n",
     "\n",
     "plt.scatter(ys,xs, s=7)\n",
     "# plt.colorbar()\n"
@@ -193,60 +118,146 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-18T18:03:22.113402Z",
-     "start_time": "2024-09-18T17:58:39.669640Z"
+     "end_time": "2024-09-20T22:37:08.303834Z",
+     "start_time": "2024-09-20T22:37:08.301723Z"
     }
    },
    "outputs": [],
    "source": [
-    "p = Pipeline([\n",
-    "    CenteringTransformer(),\n",
-    "    KernelSmoother(.15*neural_Fs),\n",
-    "    proSVD(k=6),\n",
-    "    sjPCA(),\n",
-    "])\n",
-    "iterator = p.streaming_run_on([neural_data], return_output_stream=True)\n",
+    "# p = Pipeline([\n",
+    "#     CenteringTransformer(),\n",
+    "#     KernelSmoother(.2*neural_Fs),\n",
+    "#     proSVD(k=6),\n",
+    "#     sjPCA()\n",
+    "# ])\n",
+    "# \n",
+    "# last_draw_time = 300\n",
+    "# draw_dt = 1/20\n",
+    "# exit_time = 310\n",
+    "# \n",
+    "# tq = tqdm(total=exit_time)\n",
+    "# \n",
+    "# with AnimationManager(n_cols=2, figsize=(10,5)) as am:\n",
+    "#     output_l = []\n",
+    "#     for o, s in p.streaming_run_on([neural_data], return_output_stream=True):\n",
+    "#         tq.update(o.t - tq.n)\n",
+    "#         output_l.append(o)\n",
+    "#         \n",
+    "#         if o.t > last_draw_time + draw_dt:\n",
+    "#             ax: plt.Axes = am.axs[0,1]\n",
+    "#             old_lims = ax.axis()\n",
+    "#             ax.cla()\n",
+    "#             outputs = np.squeeze(output_l[50:])\n",
+    "#             ax.plot(outputs[-20:,0], outputs[-20:,1])\n",
+    "#             ax.scatter(outputs[-1,0], outputs[-1,1])\n",
+    "#             ax.scatter(outputs[:,0], outputs[:,1], s=5, alpha=.25, c='C0', edgecolors='none')\n",
+    "#             pf.use_bigger_lims(ax, old_lims=old_lims)\n",
+    "# \n",
+    "#             ax: plt.Axes = am.axs[0,0]\n",
+    "#             ax.cla()\n",
+    "#             frame = np.argmin(np.abs(video_t - o.t))\n",
+    "#             points = ['nose', 'bodycenter', 'mouse']\n",
+    "#             ax.scatter([beh.loc[frame, point + \"_x\"] for point in points], [beh.loc[frame, point + \"_y\"] for point in points])\n",
+    "#             ax.imshow(video[frame])\n",
+    "#             ax.set_title(f\"t={o.t:.1f}\")\n",
+    "#             \n",
+    "#             \n",
+    "#             last_draw_time = o.t\n",
+    "#             am.grab_frame()\n",
+    "#         \n",
+    "#         if o.t > exit_time:\n",
+    "#             break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-09-20T22:37:27.854936Z"
+    },
+    "jupyter": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": [
     "\n",
-    "last_draw_time = 300\n",
-    "draw_dt = 1/20\n",
-    "exit_time = 400\n",
+    "for i in [0,1]:\n",
+    "    p_prosvd = Pipeline([\n",
+    "        CenteringTransformer(),\n",
+    "        KernelSmoother(.2*d.neural_Fs),\n",
+    "        proSVD(k=6),\n",
+    "    ])\n",
     "\n",
-    "tq = tqdm(total=exit_time)\n",
+    "    temp_p = Pipeline([\n",
+    "        p_prosvd,\n",
+    "        SwitchingParallelTransformer([jpca := sjPCA(), ica := mmICA()])\n",
+    "    ])\n",
     "\n",
-    "with AnimationManager(n_cols=2, figsize=(10,5)) as am:\n",
-    "    output_l = []\n",
-    "    ax: plt.Axes = am.axs[0,0]\n",
-    "    for o, s in iterator:\n",
-    "        tq.update(o.t - tq.n)\n",
-    "        output_l.append(o)\n",
+    "    if i == 1:\n",
+    "        temp_p.offline_run_on([d.neural_data])\n",
+    "        temp_p.freeze()\n",
+    "        p_prosvd.steps[1] = KernelSmoother(.2*d.neural_Fs)\n",
+    "\n",
+    "\n",
+    "\n",
+    "    last_draw_time = 0\n",
+    "    draw_dt = 1/20\n",
+    "    exit_time = d.neural_data.t.max()\n",
+    "\n",
+    "    tq = tqdm(total=exit_time)\n",
+    "\n",
+    "    with AnimationManager(n_cols=2, n_rows=2, figsize=(10,10)) as am:\n",
+    "        pro_output = [[], []]\n",
+    "        jpca_output = [[], []]\n",
+    "        ica_output = [[], []]\n",
     "        \n",
-    "        if o.t > last_draw_time + draw_dt:\n",
-    "            old_lims = ax.axis()\n",
-    "            ax.cla()\n",
-    "            outputs = np.squeeze(output_l[50:])\n",
-    "            ax.plot(outputs[-20:,0], outputs[-20:,1])\n",
-    "            ax.scatter(outputs[-1,0], outputs[-1,1])\n",
-    "            ax.scatter(outputs[:,0], outputs[:,1], s=5, alpha=.25, c='C0', edgecolors='none')\n",
-    "            pf.use_bigger_lims(ax, old_lims=old_lims)\n",
-    "            ax.set_title(f\"t={o.t:.1f}\")\n",
-    "            am.grab_frame()\n",
-    "            last_draw_time = o.t\n",
+    "        for o, s in Pipeline([]).streaming_run_on([d.neural_data], return_output_stream=True):\n",
+    "            tq.update(o.t - tq.n)\n",
     "            \n",
-    "            am.axs[0,1].cla()\n",
-    "            frame = np.argmin(np.abs(video_t - o.t))\n",
-    "            am.axs[0,1].imshow(video[frame])\n",
-    "        \n",
-    "        if o.t > exit_time:\n",
-    "            break\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "            o = p_prosvd.partial_fit_transform(o, s)\n",
+    "            o2 = jpca.partial_fit_transform(o)\n",
+    "            o3 = ica.partial_fit_transform(o)\n",
+    "            if not np.isnan(o2 + o3).any():\n",
+    "                pro_output[0].append(o[0,0])\n",
+    "                pro_output[1].append(o[0,1])\n",
+    "                \n",
+    "                jpca_output[0].append(o2[0,0])\n",
+    "                jpca_output[1].append(o2[0,1])\n",
     "\n",
-    "\n"
+    "\n",
+    "                ica_output[0].append(o3[0,0])\n",
+    "                ica_output[1].append(o3[0,1])\n",
+    "\n",
+    "            if o.t > last_draw_time + draw_dt:\n",
+    "                ax: plt.Axes = am.axs[0,0]\n",
+    "                ax.cla()\n",
+    "                frame = np.argmin(np.abs(d.video_t - o.t))\n",
+    "                points = ['nose', 'bodycenter', 'mouse']\n",
+    "                ax.scatter([d.behavior_df.loc[frame, point + \"_x\"] for point in points], [d.behavior_df.loc[frame, point + \"_y\"] for point in points])\n",
+    "                ax.imshow(d.behavior_video[frame])\n",
+    "                ax.set_title(f\"t={o.t:.1f}\")\n",
+    "\n",
+    "                for output, pos, name in [(pro_output, (0, 1), 'pro'), (jpca_output, (1, 0), 'jpca'), (ica_output, (1, 1), 'ica')]:\n",
+    "                    ax: plt.Axes = am.axs[pos]\n",
+    "                    old_lims = ax.axis()\n",
+    "                    ax.cla()\n",
+    "                    ax.plot(output[0][-20:], output[1][-20:])\n",
+    "                    ax.scatter(output[0][-1:],output[1][-1:])\n",
+    "                    ax.scatter(output[0], output[1], s=5, alpha=.25, c='C0', edgecolors='none')\n",
+    "                    pf.use_bigger_lims(ax, old_lims=old_lims)\n",
+    "                    ax.set_title(name)\n",
+    "\n",
+    "                last_draw_time = o.t\n",
+    "                am.grab_frame()\n",
+    "\n",
+    "            if o.t > exit_time:\n",
+    "                break\n"
    ]
   }
  ],
